# veritasai

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
veritasai/: __init__.py  claim_extractor.py  claim_verifier.py  evidence_retriever.py  veritasai.py
