[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veritasai"
version = "0.1.5"            # <-- add a concrete version
description = "Python utilities for veritasai (edit this description)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Suleyman Olcay Polat" }]
requires-python = ">=3.8"
keywords = ["veritasai"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "spacy",
  "sentence-transformers",
  "transformers",
  "accelerate",
  "bitsandbytes",
  "peft",
  "torch"
]

[project.urls]
Homepage = "https://github.com/sopolat/veritasai"
Repository = "https://github.com/sopolat/veritasai"
Issues = "https://github.com/sopolat/veritasai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["veritasai*"]
exclude = ["tests*", "docs*"]
